--- a/_config.yaml
+++ b/_config.yaml
@@ -1,3 +1,6 @@
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have on
+#theme: jekyll-theme-minimal
 logo: https://bioboot.github.io/bggn213_W25/assets/img/logo.png
 title: Bioinformatics
